# 2d-engine

./: Animation.cpp  Animation.h  CMakeLists.txt  Collider.cpp  Collider.h  Engine.cpp  Engine.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Point2D.cpp  Point2D.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  main.cpp
